@@ -94,12 +94,12 @@ typedef size_t my_size_t;	/* The payoff: do we have size_t now? */
  * prototypes.  You need to know this in order to choose between using
  * makefile.ansi and using makefile.unix.
  * The #define line below is set to assume you have ANSI function prototypes.
- * If you get an error in this group of lines, undefine HAVE_PROTOTYPES.
+ * If you get an error in this group of lines, undefine PROTOTYPES.
  */
 
-#define HAVE_PROTOTYPES
+#define PROTOTYPES
 
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
 int testfunction (int arg1, int * arg2); /* check prototypes */
 
 struct methods_struct {		/* check method-pointer declarations */
@@ -153,13 +153,13 @@ unsigned short un_short;
 #ifdef HAVE_VOID
 /* Caution: a C++ compiler will insist on complete prototypes */
 typedef void * void_ptr;	/* check void * */
-#ifdef HAVE_PROTOTYPES		/* check ptr to function returning void */
+#ifdef PROTOTYPES		/* check ptr to function returning void */
 typedef void (*void_func) (int a, int b);
 #else
 typedef void (*void_func) ();
 #endif
 
-#ifdef HAVE_PROTOTYPES		/* check void function result */
+#ifdef PROTOTYPES		/* check void function result */
 void test3function (void_ptr arg1, void_func arg2)
 #else
 void test3function (arg1, arg2)
@@ -183,7 +183,7 @@ void test3function (arg1, arg2)
 #ifdef HAVE_CONST
 static const int carray[3] = {1, 2, 3};
 
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
 int test4function (const int arg1)
 #else
 int test4function (arg1)
@@ -239,7 +239,7 @@ int possibly_dupli_function ()
  */
 
 
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
 int is_char_signed (int arg)
 #else
 int is_char_signed (arg)
@@ -257,7 +257,7 @@ int is_char_signed (arg)
 }
 
 
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
 int is_shifting_signed (long arg)
 #else
 int is_shifting_signed (arg)
@@ -282,7 +282,7 @@ int is_shifting_signed (arg)
 }
 
 
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
 int main (int argc, char ** argv)
 #else
 int main (argc, argv)
@@ -302,10 +302,10 @@ int main (argc, argv)
   /* Write out all the info */
   fprintf(outfile, "/* jconfig.h --- generated by ckconfig.c */\n");
   fprintf(outfile, "/* see jconfig.doc for explanations */\n\n");
-#ifdef HAVE_PROTOTYPES
-  fprintf(outfile, "#define HAVE_PROTOTYPES\n");
+#ifdef PROTOTYPES
+  fprintf(outfile, "#define PROTOTYPES\n");
 #else
-  fprintf(outfile, "#undef HAVE_PROTOTYPES\n");
+  fprintf(outfile, "#undef PROTOTYPES\n");
 #endif
 #ifdef HAVE_UNSIGNED_CHAR
   fprintf(outfile, "#define HAVE_UNSIGNED_CHAR\n");
@@ -386,7 +386,7 @@ int main (argc, argv)
   /* User report */
   printf("Configuration check for Independent JPEG Group's software done.\n");
   printf("\nI have written the jconfig.h file for you.\n\n");
-#ifdef HAVE_PROTOTYPES
+#ifdef PROTOTYPES
   printf("You should use makefile.ansi as the starting point for your Makefile.\n");
 #else
   printf("You should use makefile.unix as the starting point for your Makefile.\n");
