@@ -1,5 +1,12 @@
 2006-10-31  Akim Demaille  <demaille@gostai.com>
 
+	Check PROTOTYPES, not HAVE_PROTOTYPES
+	* coderules.doc, jmorecfg.h, jpeglib.h, ckconfig.c, 
+	* install.doc: Do that, since that's the name used by Autoconf
+	and Automake.
+
+2006-10-31  Akim Demaille  <demaille@gostai.com>
+
 	Remove package macro definitions
 	* jconfig.hin: by hand.
 	This is not satisfying, since next time autoheader will be
